build: update Gradle to 7.0.1 and update workflow
* feat(build): upgrade Gradle version to 7.0.1

* feat(CI): update workflow

* feat(CI): add dependabot

* fix(CI): workflow syntax error

* fix(CI): command not found

* fix(CI): wrong path to upload artifacts

* fix(build): change some `implementation` to `api`

* build(deps): bump netty-all from 4.1.48.Final to 4.1.68.Final

Bumps [netty-all](https://github.com/netty/netty) from 4.1.48.Final to 4.1.68.Final.
- [Release notes](https://github.com/netty/netty/releases)
- [Commits](https://github.com/netty/netty/compare/netty-4.1.48.Final...netty-4.1.68.Final)

---
updated-dependencies:
- dependency-name: io.netty:netty-all
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* chore(build): move `java-library` plugin to sub-modules

* feat(build): remove JCenter

LWJGL moved to Maven Central

* chore(deps): bump Observable from 1.3.0 to 1.4.0

Bumps Observable from 1.3.0 to 1.4.0.

---
updated-dependencies:
- dependency-name: com.github.Mouse0w0:Observable
  dependency-type: direct:production
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* feat(build): remove Sonatype repository

* feat(build): remove the special mavenCentral and mavenLocal definitions

* feat(build): use `def` to instead some clear type definition

* feat(CI): disable fail-fast

* feat(build): add mavenCentral back

* feat(CI): split zip and tar artifacts

* feat(build: add `application` section for new application plugin

* feat(build): use `mainClass.set` to instead `mainClassName`

* feat(build): create distributions with lwjgl natives naming

* feat(build): remove unused semicolons and parentheses

* feat(build): support force overwrite LWJGL natives platform with environment variable

* feat(CI): build with more platforms

* fix(CI): wr